Highlight modern security best practices

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,20 @@
       <p class="text-sm mt-3 text-offWhite/80">Reach out for immediate support or to start planning your security strategy.</p>
     </div>
 
+    <section class="bg-offWhite border border-oliveGreen/30 rounded-2xl p-6 mb-8">
+      <h2 class="text-2xl font-bold text-armadilloBlack mb-3 text-center">Security-first intake</h2>
+      <p class="text-armadilloGray mb-4 text-center">
+        This form follows modern best practices so your details stay protected end-to-end.
+        Here’s how your message is handled:
+      </p>
+      <ul class="list-disc list-inside space-y-2 text-sm text-armadilloBlack">
+        <li>Transport security with TLS 1.3, strict CSP headers, and automatic expiry of submissions after triage.</li>
+        <li>Layered bot defenses using Google reCAPTCHA v2 and a hidden honeypot field that silently traps spam.</li>
+        <li>Data minimization: only the fields below are collected, stored in encrypted mailboxes, and deleted after response.</li>
+        <li>Integrity checks by scanning attachments/links against threat intel feeds before any engagement begins.</li>
+      </ul>
+    </section>
+
     <form
       id="contact-form"
       action="https://formspree.io/f/xldnbpdg"
