--- a/index.html
+++ b/index.html
@@ -114,6 +114,44 @@
     </div>
   </section>
 
+  <!-- Modern Security Practices -->
+  <section class="bg-white shadow-inner py-16 px-6">
+    <div class="max-w-5xl mx-auto text-center">
+      <p class="uppercase tracking-[0.3em] text-sm text-oliveGreen mb-2">Modern best practices</p>
+      <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Security that keeps pace with today’s threats</h2>
+      <p class="text-lg text-armadilloGray mb-10">
+        Every engagement follows current guidance from the CIS Controls, NIST CSF, and Zero Trust architecture principles.
+        That means layered defenses, verified trust, and constant validation so your business stays resilient.
+      </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-left">
+        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Zero Trust Access</h3>
+          <p class="text-sm leading-relaxed">
+            Enforce least-privilege permissions, continuous verification, and network segmentation to minimize blast radius.
+          </p>
+        </article>
+        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">MFA &amp; Password Hygiene</h3>
+          <p class="text-sm leading-relaxed">
+            Pair phishing-resistant MFA with credential monitoring, password managers, and dark web checks for early warnings.
+          </p>
+        </article>
+        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Endpoint Detection &amp; Response</h3>
+          <p class="text-sm leading-relaxed">
+            Deploy EDR tooling, harden configurations, and automate patching across laptops, servers, and OT assets.
+          </p>
+        </article>
+        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Secure Backups &amp; Recovery</h3>
+          <p class="text-sm leading-relaxed">
+            Maintain immutable, geo-separated backups with rehearsed tabletop exercises for ransomware-ready response.
+          </p>
+        </article>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
     <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
