--- a/services.html
+++ b/services.html
@@ -104,6 +104,36 @@
     </section>
   </main>
 
+  <!-- Best Practice Playbooks -->
+  <section class="max-w-5xl mx-auto px-6 py-12">
+    <div class="bg-armadilloBlack rounded-3xl text-offWhite p-10 shadow-xl">
+      <p class="uppercase tracking-[0.25em] text-sm text-oliveGreen mb-3">Modern security playbooks</p>
+      <h2 class="text-3xl font-bold mb-4">Built on industry-backed guidance</h2>
+      <p class="text-offWhite/80 mb-8">
+        Each engagement maps deliverables to NIST CSF 2.0, CIS Controls v8, and CISA’s Secure-by-Design recommendations so you
+        know exactly which best practices are in place.
+      </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-armadilloBlack">
+        <article class="bg-white rounded-2xl p-6 shadow-lg">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-2">Identity &amp; Access</h3>
+          <p class="text-sm text-armadilloGray">Zero Trust identity reviews, conditional access rules, MFA hardening, and regular entitlement reviews.</p>
+        </article>
+        <article class="bg-white rounded-2xl p-6 shadow-lg">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-2">Detection &amp; Response</h3>
+          <p class="text-sm text-armadilloGray">EDR tuning, log retention baselines, automated alert triage, and tabletop exercises for faster containment.</p>
+        </article>
+        <article class="bg-white rounded-2xl p-6 shadow-lg">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-2">Secure Development</h3>
+          <p class="text-sm text-armadilloGray">Threat modeling workshops, supply-chain validation, and GitHub/GitLab security checks for small teams.</p>
+        </article>
+        <article class="bg-white rounded-2xl p-6 shadow-lg">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-2">Resilience &amp; Recovery</h3>
+          <p class="text-sm text-armadilloGray">Immutable backups, incident communications plans, and ransomware readiness scorecards.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
   <!-- CTA Section -->
   <section class="text-center mt-12 max-w-2xl mx-auto fade-in">
     <p class="text-armadilloGray font-semibold mb-4">
