--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
       We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
 
-    <div class="bg-white border-2 border-oliveGreen rounded-xl py-6 px-4 shadow-lg inline-block">
-      <a href="tel:19039331342" class="block text-4xl font-extrabold text-oliveGreen mt-3">
+    <div class="bg-white border border-armadilloGray/30 rounded-lg py-6 px-5 shadow-sm inline-block text-left max-w-sm">
+      <p class="text-sm font-semibold uppercase tracking-wide text-armadilloGray">Direct Support</p>
+      <a href="tel:19039331342" class="block text-2xl font-semibold text-armadilloBlack mt-2 hover:text-oliveGreen">
         (903) 933-1342
       </a>
-      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to Texas.</p>
-      <p class="text-sm text-oliveGreen mt-3">Austin-based and proud to protect our Texas neighbors.</p>
+      <p class="text-armadilloGray mt-3">Call for immediate cybersecurity assistance or to discuss your security needs.</p>
+      <p class="text-sm text-armadilloGray mt-3">Austin-based with a commitment to professional, reliable guidance.</p>
     </div>
   </main>
 
