--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,22 @@
     </p>
     <p class="text-sm text-oliveGreen text-center mb-6">Austin-based availability with the flexibility to support clients across Texas.</p>
 
-    <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center shadow-md">
-      <p class="text-lg font-semibold tracking-wide uppercase">Call Direct</p>
-      <a href="tel:19039331342" class="text-3xl font-bold text-oliveGreen hover:text-oliveDark block mt-2">
+    <div class="bg-offWhite border border-armadilloGray/30 rounded-lg p-6 mb-8 shadow-sm">
+      <p class="text-sm font-semibold tracking-wide uppercase text-armadilloGray">Direct Support</p>
+      <a href="tel:19039331342" class="text-2xl font-semibold text-armadilloBlack hover:text-oliveGreen block mt-2">
         (903) 933-1342
       </a>
-      <p class="text-sm mt-3 text-offWhite/80">Reach out for immediate support or to start planning your security strategy.</p>
+      <p class="text-armadilloGray mt-3">Call for immediate support or to discuss the right cybersecurity approach for your needs.</p>
+    </div>
+
+    <div class="bg-white border border-armadilloGray/20 rounded-lg p-6 mb-8 shadow-sm">
+      <h2 class="text-xl font-semibold text-oliveGreen mb-3">Professional review details</h2>
+      <ul class="list-disc list-inside text-armadilloGray space-y-2 text-sm">
+        <li>Executive-ready summaries and remediation roadmaps available upon request.</li>
+        <li>Comfortable collaborating under NDA and aligning to formal statements of work.</li>
+        <li>Communication tailored for technical stakeholders and leadership audiences.</li>
+        <li>References, sample deliverables, and security approach documents ready for review.</li>
+      </ul>
     </div>
 
     <form
