--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
   <main class="text-center max-w-3xl mx-auto px-6 sm:mb-6 md:mb-8">
     <h1 class="text-5xl font-extrabold text-oliveGreen mb-8">Iron Dillo Cybersecurity</h1>
     <p class="text-lg leading-relaxed mb-12">
-      <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
+      Veteran-owned cybersecurity support for
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
       <span class="font-semibold text-armadilloBlack">rural operations</span> across Texas.
-      We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
+      Every engagement is documented, risk-informed, and delivered with executive-ready clarity.
     </p>
 
-    <div class="bg-white border-2 border-oliveGreen rounded-xl py-6 px-4 shadow-lg inline-block">
-      <a href="tel:19039331342" class="block text-4xl font-extrabold text-oliveGreen mt-3">
+    <div class="bg-white border border-armadilloGray/30 rounded-lg py-6 px-5 shadow-sm inline-block text-left max-w-sm">
+      <p class="text-sm font-semibold uppercase tracking-wide text-armadilloGray">Direct Support</p>
+      <a href="tel:19039331342" class="block text-2xl font-semibold text-armadilloBlack mt-2 hover:text-oliveGreen">
         (903) 933-1342
       </a>
-      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to Texas.</p>
-      <p class="text-sm text-oliveGreen mt-3">Austin-based and proud to protect our Texas neighbors.</p>
+      <p class="text-armadilloGray mt-3">Call for immediate cybersecurity assistance or to discuss your security needs.</p>
+      <p class="text-sm text-armadilloGray mt-3">Austin-based with a commitment to professional, reliable guidance.</p>
     </div>
   </main>
 
@@ -110,6 +111,35 @@
       <div class="bg-offWhite p-6 rounded-lg shadow">
         <h3 class="font-semibold text-oliveGreen mb-2">Practical Guidance</h3>
         <p class="text-sm text-armadilloGray">Steps tailored to your business so you can move forward confidently.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Professional Readiness Section -->
+  <section class="bg-white shadow-inner py-14 px-6">
+    <div class="max-w-5xl mx-auto">
+      <p class="uppercase tracking-[0.3em] text-sm text-oliveGreen mb-2 text-center">Review-ready expertise</p>
+      <h2 class="text-3xl font-bold text-armadilloBlack mb-4 text-center">Built for recruiters, clients, and partners</h2>
+      <p class="text-lg text-armadilloGray mb-10 text-center max-w-3xl mx-auto">
+        Clear deliverables, structured methodologies, and disciplined execution so stakeholders can quickly evaluate how Iron Dillo protects their mission-critical work.
+      </p>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <article class="border border-armadilloGray/25 rounded-xl p-6 bg-offWhite h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Executive-ready reporting</h3>
+          <p class="text-sm leading-relaxed text-armadilloGray">Concise assessments with prioritized risks, remediation timelines, and ownership clearly defined.</p>
+        </article>
+        <article class="border border-armadilloGray/25 rounded-xl p-6 bg-offWhite h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Methodology-driven</h3>
+          <p class="text-sm leading-relaxed text-armadilloGray">Work anchored to NIST CSF, CIS Controls, and MITRE ATT&CK, ensuring recommendations align to recognizable standards.</p>
+        </article>
+        <article class="border border-armadilloGray/25 rounded-xl p-6 bg-offWhite h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Security-first operations</h3>
+          <p class="text-sm leading-relaxed text-armadilloGray">Hardened defaults, documented runbooks, and privacy-minded practices that reflect enterprise expectations.</p>
+        </article>
+        <article class="border border-armadilloGray/25 rounded-xl p-6 bg-offWhite h-full">
+          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Responsive collaboration</h3>
+          <p class="text-sm leading-relaxed text-armadilloGray">Direct communication, NDA-friendly coordination, and prompt follow-ups so partners can move with confidence.</p>
+        </article>
       </div>
     </div>
   </section>
