--- a/terms.html
+++ b/terms.html
@@ -51,12 +51,15 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
-    <div class="flex justify-evenly flex-wrap">
-      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+  
+  <nav class="bg-armadilloBlack/95 rounded-full mb-6 w-full fade-in shadow-sm">
+    <div class="max-w-5xl mx-auto px-4">
+      <div class="flex justify-center gap-4 flex-wrap py-2">
+        <a href="/index.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+        <a href="/services.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+        <a href="/about.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+        <a href="/contact.html" class="py-3 px-4 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+      </div>
     </div>
   </nav>
 
