Refine layout spacing and showcase best practices

--- a/index.html
+++ b/index.html
@@ -38,25 +38,27 @@
 <body class="bg-offWhite text-armadilloGray font-inter flex flex-col min-h-screen">
 
   <!-- Logo -->
-  <header class="pt-10 text-center sm:mb-6 md:mb-8">
+  <header class="pt-7 text-center sm:mb-4 md:mb-6">
     <img src="/assets/irondillo-preview.png" alt="Iron Dillo logo"
-         class="mx-auto mb-6 w-40 h-auto drop-shadow-md" />
+         class="mx-auto mb-3 w-28 h-auto drop-shadow" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
-    <div class="flex justify-evenly flex-wrap">
-      <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
-      <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
-      <a href="/about.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
-      <a href="/contact.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+  <nav class="bg-armadilloBlack/95 rounded-full mb-5 w-full fade-in shadow-sm">
+    <div class="max-w-4xl mx-auto px-4">
+      <div class="flex justify-center gap-3 flex-wrap py-2 text-xs tracking-wide">
+        <a href="/index.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
+        <a href="/services.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
+        <a href="/about.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">About</a>
+        <a href="/contact.html" class="py-2 px-3 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Contact</a>
+      </div>
     </div>
   </nav>
 
   <!-- Hero -->
-  <main class="text-center max-w-3xl mx-auto px-6 sm:mb-6 md:mb-8">
-    <h1 class="text-5xl font-extrabold text-oliveGreen mb-8">Iron Dillo Cybersecurity</h1>
-    <p class="text-lg leading-relaxed mb-12">
+  <main class="text-center max-w-3xl mx-auto px-6 sm:mb-4 md:mb-6">
+    <h1 class="text-4xl font-extrabold text-oliveGreen mb-4">Iron Dillo Cybersecurity</h1>
+    <p class="text-base leading-relaxed mb-7">
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
@@ -64,24 +66,23 @@
       We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
 
-    <div class="bg-white border border-armadilloGray/30 rounded-lg py-6 px-5 shadow-sm inline-block text-left max-w-sm">
-      <p class="text-sm font-semibold uppercase tracking-wide text-armadilloGray">Direct Support</p>
-      <a href="tel:19039331342" class="block text-2xl font-semibold text-armadilloBlack mt-2 hover:text-oliveGreen">
+    <div class="bg-white border border-armadilloGray/20 rounded-lg py-4 px-5 shadow-sm inline-block text-left max-w-sm">
+      <p class="text-xs font-semibold uppercase tracking-[0.25em] text-armadilloGray">Direct Support</p>
+      <a href="tel:19039331342" class="block text-xl font-semibold text-armadilloBlack mt-2 hover:text-oliveGreen">
         (903) 933-1342
       </a>
-      <p class="text-armadilloGray mt-3">Call for immediate cybersecurity assistance or to discuss your security needs.</p>
-      <p class="text-sm text-armadilloGray mt-3">Austin-based with a commitment to professional, reliable guidance.</p>
+      <p class="text-sm text-armadilloGray mt-3">Call for immediate cybersecurity assistance or to discuss your security needs.</p>
+      <p class="text-xs text-armadilloGray mt-3">Austin-based with a commitment to professional, reliable guidance.</p>
     </div>
   </main>
 
   <!-- Split Section with Bluebonnet Image -->
-  <section class="grid grid-cols-1 md:grid-cols-2 gap-0 my-12">
-    <div class="flex items-center justify-center bg-offWhite p-8">
-      <div>
-        <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Rooted in Texas</h2>
-        <p class="text-lg text-armadilloGray leading-relaxed"> 
-          We protect the businesses and people our community depends on 
-          with cybersecurity that’s accessible, affordable, and reliable.
+  <section class="grid grid-cols-1 md:grid-cols-2 gap-0 my-10">
+    <div class="flex items-center justify-center bg-offWhite px-6 py-7">
+      <div class="max-w-md">
+        <h2 class="text-3xl font-bold text-armadilloBlack mb-3">Rooted in Texas</h2>
+        <p class="text-base text-armadilloGray leading-relaxed">
+          We protect the businesses and people our community depends on with cybersecurity that’s accessible, affordable, and reliable.
         </p>
       </div>
     </div>
@@ -92,69 +93,29 @@
   </section>
 
   <!-- What We Do Section -->
-  <section class="max-w-4xl mx-auto text-center px-6 py-16">
-    <h2 class="text-3xl font-bold text-armadilloBlack mb-6">What Iron Dillo Delivers</h2>
-    <p class="mb-10 text-lg text-armadilloGray leading-relaxed">
-      We believe every business deserves protection. That’s why we provide
-      hands-on cybersecurity for Texas individuals, small businesses,
-      and rural operations at a scale and cost that makes sense.
+  <section class="max-w-4xl mx-auto text-center px-6 py-10">
+    <h2 class="text-3xl font-bold text-armadilloBlack mb-4">What Iron Dillo Delivers</h2>
+    <p class="mb-6 text-base text-armadilloGray leading-relaxed">
+      We believe every business deserves protection. That’s why we provide hands-on cybersecurity for Texas individuals, small businesses, and rural operations at a scale and cost that makes sense.
     </p>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="bg-offWhite p-6 rounded-lg shadow">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
+      <div class="bg-white/80 border border-armadilloGray/10 p-5 rounded-lg shadow-sm">
         <h3 class="font-semibold text-oliveGreen mb-2">Remote Assessments</h3>
-        <p class="text-sm text-armadilloGray">Identify risks in your systems quickly and securely.</p>
+        <p class="text-sm text-armadilloGray leading-relaxed">Identify risks in your systems quickly and securely.</p>
       </div>
-      <div class="bg-offWhite p-6 rounded-lg shadow">
+      <div class="bg-white/80 border border-armadilloGray/10 p-5 rounded-lg shadow-sm">
         <h3 class="font-semibold text-oliveGreen mb-2">Actionable Reports</h3>
-        <p class="text-sm text-armadilloGray">Plain-English documentation, not confusing jargon.</p>
+        <p class="text-sm text-armadilloGray leading-relaxed">Plain-English documentation, not confusing jargon.</p>
       </div>
-      <div class="bg-offWhite p-6 rounded-lg shadow">
+      <div class="bg-white/80 border border-armadilloGray/10 p-5 rounded-lg shadow-sm">
         <h3 class="font-semibold text-oliveGreen mb-2">Practical Guidance</h3>
-        <p class="text-sm text-armadilloGray">Steps tailored to your business so you can move forward confidently.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Modern Security Practices -->
-  <section class="bg-white shadow-inner py-16 px-6">
-    <div class="max-w-5xl mx-auto text-center">
-      <p class="uppercase tracking-[0.3em] text-sm text-oliveGreen mb-2">Modern best practices</p>
-      <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Security that keeps pace with today’s threats</h2>
-      <p class="text-lg text-armadilloGray mb-10">
-        Every engagement follows current guidance from the CIS Controls, NIST CSF, and Zero Trust architecture principles.
-        That means layered defenses, verified trust, and constant validation so your business stays resilient.
-      </p>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-left">
-        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
-          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Zero Trust Access</h3>
-          <p class="text-sm leading-relaxed">
-            Enforce least-privilege permissions, continuous verification, and network segmentation to minimize blast radius.
-          </p>
-        </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
-          <h3 class="text-xl font-semibold text-oliveGreen mb-3">MFA &amp; Password Hygiene</h3>
-          <p class="text-sm leading-relaxed">
-            Pair phishing-resistant MFA with credential monitoring, password managers, and dark web checks for early warnings.
-          </p>
-        </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
-          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Endpoint Detection &amp; Response</h3>
-          <p class="text-sm leading-relaxed">
-            Deploy EDR tooling, harden configurations, and automate patching across laptops, servers, and OT assets.
-          </p>
-        </article>
-        <article class="border border-oliveGreen/30 rounded-2xl p-6 h-full">
-          <h3 class="text-xl font-semibold text-oliveGreen mb-3">Secure Backups &amp; Recovery</h3>
-          <p class="text-sm leading-relaxed">
-            Maintain immutable, geo-separated backups with rehearsed tabletop exercises for ransomware-ready response.
-          </p>
-        </article>
+        <p class="text-sm text-armadilloGray leading-relaxed">Steps tailored to your business so you can move forward confidently.</p>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
+  <footer class="bg-armadilloBlack text-offWhite text-center py-10 mt-auto">
     <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
 
     <!-- Social Icons -->
