Improve homepage readability

--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
                 <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-oliveGreen font-bold">24/7</div>
                 <div>
                   <p class="text-armadilloBlack font-semibold">Response-ready</p>
-                  <p class="text-sm text-armadilloGray">Direct access when things feel off.</p>
+                  <p class="text-base leading-relaxed text-armadilloGray">Direct access when things feel off.</p>
                 </div>
               </div>
               <div class="hero-accent rounded-xl p-4 flex items-center gap-3">
                 <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-oliveGreen font-bold">1:1</div>
                 <div>
                   <p class="text-armadilloBlack font-semibold">Executive briefings</p>
-                  <p class="text-sm text-armadilloGray">Clear recommendations and next steps.</p>
+                  <p class="text-base leading-relaxed text-armadilloGray">Clear recommendations and next steps.</p>
                 </div>
               </div>
               <div class="hero-accent rounded-xl p-4 flex items-center gap-3">
                 <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-oliveGreen font-bold">TX</div>
                 <div>
                   <p class="text-armadilloBlack font-semibold">Rooted in Texas</p>
-                  <p class="text-sm text-armadilloGray">Austin-based, community-minded support.</p>
+                  <p class="text-base leading-relaxed text-armadilloGray">Austin-based, community-minded support.</p>
                 </div>
               </div>
             </div>
@@ -107,20 +107,20 @@
               <a href="tel:19039331342" class="block text-3xl font-extrabold text-armadilloBlack mt-2 hover:text-oliveGreen">
                 (903) 933-1342
               </a>
-              <p class="text-sm text-armadilloGray mt-3">Call for immediate guidance or to book a security assessment.</p>
+              <p class="text-base leading-relaxed text-armadilloGray mt-3">Call for immediate guidance or to book a security assessment.</p>
               <div class="flex items-center gap-3 mt-5">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 text-oliveGreen" viewBox="0 0 24 24" fill="currentColor">
                   <path d="M20.94 11c0 5.49-3.45 10-8.94 12-5.49-2-8.94-6.51-8.94-12S6.51 1 12 1s8.94 4.51 8.94 10ZM7 11a5 5 0 1 0 10 0A5 5 0 0 0 7 11Zm5-3a3 3 0 1 0 .001 6.001A3 3 0 0 0 12 8Z"/>
                 </svg>
                 <div>
                   <p class="font-semibold text-armadilloBlack">Onsite or remote</p>
-                  <p class="text-sm text-armadilloGray">Choose the option that keeps your teams focused.</p>
+                  <p class="text-base leading-relaxed text-armadilloGray">Choose the option that keeps your teams focused.</p>
                 </div>
               </div>
             </div>
             <div class="rounded-2xl overflow-hidden hero-accent shadow-lg">
               <img src="/assets/Bluebonnet.png" alt="Texas bluebonnet field" class="w-full h-52 object-cover" />
-              <div class="p-4 text-sm text-armadilloBlack">
+              <div class="p-4 text-base leading-relaxed text-armadilloBlack">
                 Texas-owned, protecting the people and businesses our communities rely on.
               </div>
             </div>
@@ -138,17 +138,17 @@
           <div class="glass-panel rounded-2xl p-6">
             <p class="pill mb-3">Assess</p>
             <h3 class="text-xl font-semibold text-armadilloBlack">Remote & Onsite Assessments</h3>
-            <p class="text-sm leading-relaxed mt-2">Risk-informed reviews of your systems, networks, and processes with prioritized actions.</p>
+            <p class="text-base leading-relaxed mt-3 text-armadilloGray">Risk-informed reviews of your systems, networks, and processes with prioritized actions.</p>
           </div>
           <div class="glass-panel rounded-2xl p-6">
             <p class="pill mb-3">Report</p>
             <h3 class="text-xl font-semibold text-armadilloBlack">Executive-Ready Documentation</h3>
-            <p class="text-sm leading-relaxed mt-2">Plain-English reports, policy updates, and visuals your leadership can act on.</p>
+            <p class="text-base leading-relaxed mt-3 text-armadilloGray">Plain-English reports, policy updates, and visuals your leadership can act on.</p>
           </div>
           <div class="glass-panel rounded-2xl p-6">
             <p class="pill mb-3">Guide</p>
             <h3 class="text-xl font-semibold text-armadilloBlack">Practical Implementation</h3>
-            <p class="text-sm leading-relaxed mt-2">Hands-on guidance to deploy fixes, train teams, and verify improvements.</p>
+            <p class="text-base leading-relaxed mt-3 text-armadilloGray">Hands-on guidance to deploy fixes, train teams, and verify improvements.</p>
           </div>
         </div>
       </section>
@@ -162,15 +162,15 @@
         <div class="timeline space-y-6">
           <div class="timeline-step">
             <h3 class="text-lg font-semibold text-armadilloBlack">1) Listen & align</h3>
-            <p class="text-sm text-armadilloGray">Clarify objectives, risks, and business constraints so recommendations fit your reality.</p>
+            <p class="text-base leading-relaxed text-armadilloGray">Clarify objectives, risks, and business constraints so recommendations fit your reality.</p>
           </div>
           <div class="timeline-step">
             <h3 class="text-lg font-semibold text-armadilloBlack">2) Assess & validate</h3>
-            <p class="text-sm text-armadilloGray">Perform remote diagnostics or onsite reviews, verify findings, and capture clear evidence.</p>
+            <p class="text-base leading-relaxed text-armadilloGray">Perform remote diagnostics or onsite reviews, verify findings, and capture clear evidence.</p>
           </div>
           <div class="timeline-step">
             <h3 class="text-lg font-semibold text-armadilloBlack">3) Deliver & support</h3>
-            <p class="text-sm text-armadilloGray">Present executive-ready briefs, then work alongside your team to implement and measure.</p>
+            <p class="text-base leading-relaxed text-armadilloGray">Present executive-ready briefs, then work alongside your team to implement and measure.</p>
           </div>
         </div>
       </section>
@@ -180,7 +180,7 @@
         <div>
           <p class="pill mb-3">Ready to protect</p>
           <h2 class="text-2xl font-bold text-armadilloBlack">Let’s secure what keeps your business running.</h2>
-          <p class="text-armadilloGray mt-2">Get an assessment date, understand the effort, and receive a clear path forward within days.</p>
+          <p class="text-base leading-relaxed text-armadilloGray mt-3">Get an assessment date, understand the effort, and receive a clear path forward within days.</p>
         </div>
         <div class="flex flex-wrap gap-3">
           <a class="btn-primary" href="mailto:contact@irondillo.com">Email the team</a>
