--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
 <body class="flex flex-col min-h-screen text-armadilloGray font-inter page-shell">
   <div class="relative flex flex-col min-h-screen">
     <header class="relative z-10 max-w-6xl mx-auto px-6 pt-8 fade-in">
-      <div class="glass-panel nav-shell bg-armadilloBlack/90 rounded-2xl px-5 sm:px-8 py-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
+      <div class="glass-panel nav-shell rounded-2xl px-5 sm:px-8 py-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
         <div class="flex items-center gap-4">
           <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="w-14 h-14" />
           <div>
