Refine site copy for professional tone

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="flex flex-col lg:flex-row gap-10 items-center lg:items-start">
           <div class="flex-1 space-y-5">
             <span class="pill">Practical Cyber Defense</span>
-            <h1 class="text-4xl md:text-5xl font-extrabold text-armadilloBlack leading-tight">Cybersecurity you can trust, delivered with executive clarity.</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-armadilloBlack leading-tight">Cybersecurity you can trust, delivered with executive-level clarity.</h1>
             <p class="text-lg leading-relaxed text-armadilloGray">
               We protect individuals, small businesses, and rural operations across Texas with actionable security guidance, rapid diagnostics, and documentation leaders can use. Every engagement is personal, transparent, and built for busy teams.
             </p>
             <div class="flex flex-wrap gap-3">
               <a class="btn-primary" href="/contact.html">
-                Schedule a consult
+                Schedule a consultation
                 <span aria-hidden="true">→</span>
               </a>
               <a class="btn-link" href="/services.html">View services</a>
@@ -81,7 +81,7 @@
                 <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center text-oliveGreen font-bold">24/7</div>
                 <div>
                   <p class="text-armadilloBlack font-semibold">Response-ready</p>
-                  <p class="text-base leading-relaxed text-armadilloGray">Direct access when things feel off.</p>
+                  <p class="text-base leading-relaxed text-armadilloGray">Direct access when you need validation.</p>
                 </div>
               </div>
               <div class="hero-accent rounded-xl p-4 flex items-center gap-3">
