--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="w-14 h-14" />
           <div>
             <p class="pill">About</p>
-            <p class="text-offWhite font-semibold text-lg">Veteran-owned. Mission-led.</p>
+            <p class="text-offWhite font-semibold text-lg">Veteran-owned. Client-focused.</p>
             <p class="text-sm text-offWhite/80">Rooted in Austin, serving Texas</p>
           </div>
         </div>
@@ -56,7 +56,7 @@
           <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
           <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
           <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
-          <a href="tel:19039331342" class="btn-primary text-sm">Call today</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call for guidance</a>
         </nav>
       </div>
     </header>
@@ -73,7 +73,7 @@
         </div>
         <div class="space-y-4">
           <h2 class="text-2xl font-bold text-armadilloBlack">Meet Kris McCoy</h2>
-          <p class="text-armadilloGray leading-relaxed">As the owner of Iron Dillo, Kris brings military discipline, Texas grit, and years of hands-on security experience. Every client receives transparent communication, documented findings, and support that fits their mission.</p>
+          <p class="text-armadilloGray leading-relaxed">As the owner of Iron Dillo, Kris brings military discipline, operational focus, and years of hands-on security experience. Every client receives transparent communication, documented findings, and support that fits their priorities.</p>
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
             <div class="hero-accent rounded-2xl p-4">
               <p class="text-sm font-semibold text-armadilloBlack">Veteran-led</p>
