--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           <img src="/assets/irondillo-preview.png" alt="Iron Dillo logo" class="w-14 h-14" />
           <div>
             <p class="pill">Contact</p>
-            <p class="text-offWhite font-semibold text-lg">Start the conversation</p>
+            <p class="text-offWhite font-semibold text-lg">Contact our team</p>
             <p class="text-sm text-offWhite/80">Austin-based. Texas focused.</p>
           </div>
         </div>
@@ -55,7 +55,7 @@
           <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
           <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
           <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
-          <a href="tel:19039331342" class="btn-primary text-sm">Call now</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call for guidance</a>
         </nav>
       </div>
     </header>
@@ -63,8 +63,8 @@
     <main class="flex-grow max-w-6xl mx-auto px-6 py-10 space-y-10">
       <section class="glass-panel rounded-3xl p-8 md:p-12 grid grid-cols-1 lg:grid-cols-3 gap-8 items-start">
         <div class="lg:col-span-1 space-y-4">
-          <h1 class="text-4xl font-extrabold text-armadilloBlack">Let’s talk.</h1>
-          <p class="text-base text-armadilloGray leading-relaxed">Share what you’re seeing, what you need, and the timeline you’re working with. We’ll respond quickly with next steps and a clear plan.</p>
+          <h1 class="text-4xl font-extrabold text-armadilloBlack">Contact our team.</h1>
+          <p class="text-base text-armadilloGray leading-relaxed">Share what you’re seeing, what you need, and the timeline you’re working with. We’ll respond with next steps and a clear plan.</p>
           <div class="space-y-3">
             <div class="hero-accent rounded-2xl p-4">
               <p class="text-sm font-semibold text-armadilloBlack">Direct line</p>
