--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
           <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="w-14 h-14" />
           <div>
             <p class="pill">Services</p>
-            <p class="text-offWhite font-semibold text-lg">Mission-ready cybersecurity</p>
+            <p class="text-offWhite font-semibold text-lg">Business-focused cybersecurity</p>
             <p class="text-sm text-offWhite/80">Austin-based, serving Texas businesses</p>
           </div>
         </div>
@@ -60,7 +60,7 @@
           <a href="/services.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Services</a>
           <a href="/about.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">About</a>
           <a href="/contact.html" class="text-offWhite font-semibold px-3 py-2 rounded-xl hover:bg-white/10">Contact</a>
-          <a href="tel:19039331342" class="btn-primary text-sm">Call now</a>
+          <a href="tel:19039331342" class="btn-primary text-sm">Call for consultation</a>
         </nav>
       </div>
     </header>
@@ -69,7 +69,7 @@
       <section class="glass-panel rounded-3xl p-8 md:p-12 flex flex-col md:flex-row gap-8 items-start">
         <div class="flex-1 space-y-4">
           <h1 class="text-4xl font-extrabold text-armadilloBlack">Our Services</h1>
-          <p class="text-base text-armadilloGray leading-relaxed">Practical, veteran-owned cybersecurity solutions for Texas businesses and individuals. Everything we deliver is built for clarity, speed, and executive-ready decisions.</p>
+          <p class="text-base text-armadilloGray leading-relaxed">Practical, veteran-owned cybersecurity solutions for Texas businesses and individuals. Everything we deliver is built for clarity, speed, and leadership-ready decisions.</p>
           <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
             <div class="hero-accent rounded-2xl p-4">
               <p class="text-sm font-semibold text-armadilloBlack">Rapid discovery</p>
